[package]
name = "retryiter"
version = "0.4.3"
authors = ["Vigneshwaran P <hello@vigneshwaran.me>"]
edition = "2018"
description = "A wrapper lib on top of rust Iterator with added retry support"
license = "MIT License"
repository = "https://github.com/VigneshChennai/retryiter"

[dependencies]

[dev-dependencies]
tokio = { version="1.1.1", features = ["full"] }
futures = "0.3.12"
rayon = "1"